k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hackability
  name: hackability
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: hackability
